[package]
name = "wasm-3d"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.24", features = [ "derive" ] }
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "27.0.0"
pollster = "0.3"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location"
]}
image = {version = "0.24", default-features = false, features = ["png", "jpeg"]}
cgmath = "0.18.0"
reqwest = { version = "0.11" }
tobj = { version = "3.2", default-features = false, features = ["async"]}


[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"



